syntax = "proto3";

package qutlas.geometry;

service GeometryService {
  rpc LoadAsset (AssetRequest) returns (AssetResponse);
  rpc Boolean (BooleanRequest) returns (GeometryResponse);
  rpc Fillet (FilletRequest) returns (GeometryResponse);
  rpc GenerateMesh (MeshRequest) returns (MeshResponse);
  rpc ImportStep (FileRequest) returns (AssetResponse);
  rpc ExportStep (ExportRequest) returns (FileResponse);
}

message AssetRequest {
  string asset_id = 1;
  bytes asset_data = 2;
}

message AssetResponse {
  string asset_id = 1;
  string status = 2;
  bytes mesh_data = 3;
  BoundingBox bounds = 4;
  string error = 5;
}

message BooleanRequest {
  bytes geometry_a = 1;
  bytes geometry_b = 2;
  string operation = 3; // "union", "difference", "intersection"
}

message FilletRequest {
  bytes geometry = 1;
  repeated int32 edge_indices = 2;
  double radius = 3;
}

message MeshRequest {
  bytes geometry = 1;
  double deflection = 2; // mesh quality: smaller = finer
}

message MeshResponse {
  bytes gltf_data = 1;
  int32 vertex_count = 2;
  int32 face_count = 3;
}

message GeometryResponse {
  bytes geometry_data = 1;
  string status = 2;
  string error = 3;
}

message BoundingBox {
  double min_x = 1;
  double min_y = 2;
  double min_z = 3;
  double max_x = 4;
  double max_y = 5;
  double max_z = 6;
}

message FileRequest {
  bytes file_data = 1;
  string file_type = 2; // "step", "iges", "stl"
}

message FileResponse {
  bytes file_data = 1;
  string status = 2;
  string error = 3;
}

message ExportRequest {
  bytes geometry = 1;
  string export_format = 2;
}
