// gRPC OCCT wrapper service
package main

import (
	"context"
	"log"
	"net"

	"google.golang.org/grpc"
	pb "qutlas/proto"
)

type server struct {
	pb.UnimplementedGeometryServiceServer
}

func (s *server) LoadAsset(ctx context.Context, req *pb.AssetRequest) (*pb.AssetResponse, error) {
	log.Printf("Loading asset: %s", req.AssetId)

	// Placeholder: In production, use OpenCascade C++ bindings via cgo
	// 1. Parse STEP/IGES/STL file
	// 2. Generate triangulated mesh
	// 3. Compute bounding box
	// 4. Return GLTF data and bounds

	return &pb.AssetResponse{
		AssetId: req.AssetId,
		Status:  "loaded",
		Bounds: &pb.BoundingBox{
			MinX: 0, MinY: 0, MinZ: 0,
			MaxX: 100, MaxY: 100, MaxZ: 100,
		},
	}, nil
}

func (s *server) Boolean(ctx context.Context, req *pb.BooleanRequest) (*pb.GeometryResponse, error) {
	log.Printf("Boolean operation: %s", req.Operation)

	// Placeholder: In production, perform robust boolean using OCCT
	// Handle edge cases: degenerate geometries, self-intersections, etc.

	return &pb.GeometryResponse{
		Status: "completed",
	}, nil
}

func (s *server) Fillet(ctx context.Context, req *pb.FilletRequest) (*pb.GeometryResponse, error) {
	log.Printf("Filleting edges with radius: %f", req.Radius)

	// Placeholder: Use ChFi_FilletAPI from OCCT

	return &pb.GeometryResponse{
		Status: "completed",
	}, nil
}

func (s *server) GenerateMesh(ctx context.Context, req *pb.MeshRequest) (*pb.MeshResponse, error) {
	log.Printf("Generating mesh with deflection: %f", req.Deflection)

	// Placeholder: Use BRepMesh_IncrementalMesh from OCCT
	// Convert to GLTF with Draco compression for streaming

	return &pb.MeshResponse{
		Status:      "completed",
		VertexCount: 10000,
		FaceCount:   5000,
	}, nil
}

func (s *server) ImportStep(ctx context.Context, req *pb.FileRequest) (*pb.AssetResponse, error) {
	log.Printf("Importing STEP file")

	// Placeholder: STEPControl_Reader
	return &pb.AssetResponse{
		Status: "imported",
	}, nil
}

func (s *server) ExportStep(ctx context.Context, req *pb.ExportRequest) (*pb.FileResponse, error) {
	log.Printf("Exporting STEP file")

	// Placeholder: STEPControl_Writer
	return &pb.FileResponse{
		Status: "exported",
	}, nil
}

func main() {
	lis, err := net.Listen("tcp", ":50051")
	if err != nil {
		log.Fatalf("failed to listen: %v", err)
	}

	s := grpc.NewServer()
	pb.RegisterGeometryServiceServer(s, &server{})

	log.Println("gRPC OCCT server listening on :50051")
	if err := s.Serve(lis); err != nil {
		log.Fatalf("failed to serve: %v", err)
	}
}
